--- a/views/layout (Sean’s MacBook Pro (2)'s conflicted copy 2015-05-30).ejs
+++ b/views/layout (Sean’s MacBook Pro (2)'s conflicted copy 2015-05-30).ejs
@@ -30,8 +30,10 @@
     -->
 
 
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.0/angular-material.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+
+
+    <!-- Angular Material CSS now available via Google CDN; version 0.8 used here -->
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.css">
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/importer.css">
@@ -42,9 +44,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+
+
+    <!-- Angular Material Javascript now available via Google CDN; version 0.8 used here -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.8.3/angular-material.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.11/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-resource.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.0/angular-material.min.js"></script>
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
@@ -52,7 +57,7 @@
     <script src="/js/app/controllers/HomeCtrl.js"></script>
     <script src="/js/app/controllers/StaticCtrl.js"></script>
     <!--SCRIPTS END-->
-    <meta name="viewport" content="initial-scale=1" />
+
   </head>
 
   <body layout="column" ng-controller="AppCtrl">
