Reddit API Call

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -50,7 +50,10 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/app/app.js"></script>
     <script src="/js/app/controllers/HomeCtrl.js"></script>
+    <script src="/js/app/controllers/SideNavCtrl.js"></script>
     <script src="/js/app/controllers/StaticCtrl.js"></script>
+    <script src="/js/app/controllers/WeightRoomCtrl.js"></script>
+    <script src="/js/app/controllers/WhiteBoardCtrl.js"></script>
     <!--SCRIPTS END-->
     <meta name="viewport" content="initial-scale=1" />
   </head>
