--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,6 +6,13 @@
 <div layout="row" flex>
     <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
       <img class="logo" src="/images/Leviathan.png">
+      <a href="/" class="md-button md-default-theme">Home</a>
+      <a href="/whiteboard" class="md-button md-default-theme">White Board</a>
+      <a href="/weightroom" class="md-button md-default-theme">Weight Room</a>
+      <a class="md-button md-default-theme">Log Out</a>
+      <a class="md-button md-default-theme">Sign Up</a>
+      <a class="md-button md-default-theme">Log In</a>
+      <a href="/about" class="md-button md-default-theme">About</a>
     </md-sidenav>
     <div layout="column" flex id="content">
         <md-content layout="column" flex class="md-padding">
