--- a/assets/views/whiteboard/index.html
+++ b/assets/views/whiteboard/index.html
@@ -1,2 +1,5 @@
-<h1>This is the user white board</h1>
-<p>Recording stats and all that other stuff related to it goes here.</p>
+<md-toolbar class="md-theme-light">
+  <div class="md-toolbar-tools">
+    <h2 class="md-flex">White Board</h2>
+  </div>
+</md-toolbar>
