--- a/assets/views/weightroom/index.html
+++ b/assets/views/weightroom/index.html
@@ -1,3 +1,7 @@
+<div id="loader" ng-if="$root.loading">
+  <i class="fa fa-spin fa-spinner fa-5x"></i>
+</div>
+
 <md-toolbar class="md-theme-light">
   <h2 class="md-toolbar-tools">
     <span>WEIGHTROOM</span>
