--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,7 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
 
-
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.0/angular-material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
 
@@ -49,8 +49,9 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/app/app.js"></script>
+    <script src="/js/app/controllers/AppCtrl.js"></script>
+    <script src="/js/app/controllers/AuthCtrl.js"></script>
     <script src="/js/app/controllers/HomeCtrl.js"></script>
-    <script src="/js/app/controllers/SideNavCtrl.js"></script>
     <script src="/js/app/controllers/StaticCtrl.js"></script>
     <script src="/js/app/controllers/WeightRoomCtrl.js"></script>
     <script src="/js/app/controllers/WhiteBoardCtrl.js"></script>
