--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,9 +9,9 @@
       <md-button ng-href="/" class="md-button md-default-theme">Home</md-button>
       <md-button href="/whiteboard" class="md-button md-default-theme">White Board</md-button>
       <md-button href="/weightroom" class="md-button md-default-theme">Weight Room</md-button>
-      <md-button class="md-button md-default-theme">Log Out</md-button>
-      <md-button class="md-button md-default-theme">Sign Up</md-button>
-      <md-button class="md-button md-default-theme">Log In</md-button>
+      <md-button href="/logout" class="md-button md-default-theme">Log Out</md-button>
+      <md-button href="/signup" class="md-button md-default-theme">Sign Up</md-button>
+      <md-button href="/login" class="md-button md-default-theme">Log In</md-button>
       <md-button href="/about" class="md-button md-default-theme">About</md-button>
     </md-sidenav>
     <div layout="column" flex id="content">
