--- a/assets/views/auth/signup.html
+++ b/assets/views/auth/signup.html
@@ -20,6 +20,6 @@
   <div layout="row">
     <md-button>Submit</md-button>
   </form>
-  <md-button class="md-primary" ng-click="logIn('facebook')">Login with Facebook</md-button>
+  <md-button class="md-primary" ng-click="logIn('facebook')"><i class="fa fa-facebook-official"></i> Login</md-button>
   </div>
 </div>
