--- a/assets/views/weightroom/index.html
+++ b/assets/views/weightroom/index.html
@@ -11,7 +11,7 @@
   <md-content>
     <md-list>
       <md-list-item class="md-3-line" ng-repeat="article in articles">
-        <div class="md-list-item-text">
+        <div class="md-list-item-text flow-text">
           <h3>{{article.data.title}}</h3>
           <h4>{{article.data.domain}}</h4>
           <md-button class="md-raised md-primary" ng-href="{{article.data.url}}" target="_blank">VIEW article</md-button>
