--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,7 @@
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/css/materialize.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.0/angular-material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
@@ -38,6 +39,7 @@
     <link rel="stylesheet" href="/styles/style.css">
     <!--STYLES END-->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.96.1/js/materialize.min.js"></script>
     <!-- Angular Material Dependencies -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
@@ -55,6 +57,7 @@
     <script src="/js/app/controllers/StaticCtrl.js"></script>
     <script src="/js/app/controllers/WeightRoomCtrl.js"></script>
     <script src="/js/app/controllers/WhiteBoardCtrl.js"></script>
+    <script src="/js/services/UserService.js"></script>
     <!--SCRIPTS END-->
     <meta name="viewport" content="initial-scale=1" />
   </head>
